[metadata]
name = resource-manager
version = 0.1.0
author = Shoeboxam
author-email = shoeboxam@gmail.com
home-page = https://github.com/Soartex-Modded/Templates/python_package
description = a utilities library for resource pack maintenance and development
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = 'Minecraft resource-pack'
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Topic :: Multimedia :: Graphics
    Topic :: Games/Entertainment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
test_suite = tests
install_requires =
    watchdog
    toml
    sqlalchemy

[sdist]
formats = zip, gztar

